Fix: 改行周りを修正

--- a/src/global.scss
+++ b/src/global.scss
@@ -2,7 +2,7 @@
 @import 'prism-themes/themes/prism-material-light.css' screen;
 @import 'prism-themes/themes/prism-material-dark.css' screen and (prefers-color-scheme: dark);
 body {
-	background: #eee;
+	background: #f0f0f0;
 	color: #333;
 	margin: 0;
 	padding: 0;
